# aisha-brain

./: .gitignore  install_local_deps.sh  launch.sh  local_facts.txt
src/aisha_brain/: build_knowledge.py  package.xml  quick_test.py  requirements.txt  setup.cfg  setup.py
src/aisha_brain/aisha_brain/: action_node.py  admin_node.py  brain_node.py  build_knowledge.py  stt_node.py  tts_node.py  wa_listener.js  whatsapp_listener.py
src/aisha_brain/aisha_raw_data/: admissions.md  campus-facilities.md  exam_schedule.md  homepage.md  school_calendar.md  school_facts.txt  tuition-fees.md
src/aisha_brain/config/: LD19_2D.json  fastdds_jetson.xml  fastdds_rpi.xml  fastdds_ws.xml  jetson_orin_nano.yaml  nav_locations.json
src/aisha_brain/launch/: aisha_launch.py  jetson_launch.py  rpi_launch.py  ws_launch.py
src/aisha_brain/scripts/: simulate_campus.py
src/aisha_brain/test/: conftest.py  test_action_node.py  test_brain_node.py  test_tts_node.py
