<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aisha_brain</name>
  <version>1.0.0</version>
  <description>AI-SHA Brain - ROS2 intent routing and knowledge system for a school robot</description>
  <maintainer email="aisha@robot.local">AI-SHA Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Python dependencies (install via pip, listed here for documentation) -->
  <!-- chromadb, llama-index, sentence-transformers, ollama, requests, piper-tts -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
